# redcap-support-core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.worker  Dockerfile.worker.dev  README.md  alembic.ini  docker-compose-dev.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 0adba5aa27d8_add_authorized_user_table.py  1e599fd8a527_add_report_calculated_fields.py  3199a0f7f49c_add_unique_constraint_to_event_.py  5dccfde0385d_add_report_table.py  6d340c740267_add_user_table.py  834d17001485_rework_admins_into_authorizations_table.py  92bfadfe2b46_initialize_redcap_database_tables.py  ad91bffe81be_add_table_indexes.py  d9c6047a1208_add_redcap_relational_project_structure.py  dc14eebba280_add_relationships_for_events_and_.py
rss/: deps.py  server_main.py  worker.py
rss/lib/exceptions/: authentication.py
rss/lib/querybuilder/: operators.py
rss/models/: project_field.py  project_instrument.py
rss/routers/: project.py  queue.py  user.py
rss/view_models/base/: base.py
src/rss/: __init__.py  deps.py  server_main.py  worker.py
src/rss/db/: base.py  session.py
src/rss/lib/: authentication.py  authorization.py  middlewares.py  pagination.py  redcap_interface.py  report.py
src/rss/models/: __init__.py  authorized_user.py  event.py  instrument.py  project.py  project_arm.py  project_event.py  project_field.py  project_instrument.py  report.py  user.py
tests/: conftest.py  utils.py
tests/test_api/: test_authentication.py  test_calculated_fields.py  test_ping.py  test_report.py  test_user.py
(+22 files in other folders)
